tests/baselines/reference/enumPropertyAccess.errors.txt
==== tests/cases/compiler/enumPropertyAccess.ts (2 errors) ====
    enum Colors {
        Red,
        Green
    }
    
    var x = Colors.Red; // type of 'x' should be 'Colors'
    var p = x.Green; // error
              ~~~~~
!!! enumPropertyAccess.ts(7,11): error TS2094: The property 'Green' does not exist on value of type 'Colors'.
    x.toFixed(); // ok
    
    // Now with generics
    function fill<B extends Colors>(f: B) {
        f.Green; // error
          ~~~~~
!!! enumPropertyAccess.ts(12,7): error TS2094: The property 'Green' does not exist on value of type 'B'.
        f.toFixed(); // ok
    }